Fixed layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,6 @@ h4,
   }
 }
 
-
 h5,
 .h5 {
   font-size: 18px;
@@ -141,6 +140,13 @@ h6,
   position: relative;
   z-index: 1;
   transition: 0.2s ease;
+}
+
+@media (max-width: 991px) {
+  .btn {
+    padding: 16px 12px;
+    font-size: 16px;
+  }
 }
 
 .btn:focus {
@@ -221,20 +227,22 @@ body {
 
 ol,
 ul {
-  list-style-type: none;
-  margin: 0;
-}
-/*
-ol,
-ul {
   margin-left: 0.5rem;
-
 }
 
 li {
   padding-left: 1rem;
 }
-*/
+
+@media (max-width: 991px) {
+  ol,
+  ul {
+    margin-left: -0.4rem;
+  }
+  li {
+    padding-left: 0.2rem;
+  }
+}
 
 img {
   vertical-align: middle;
@@ -894,7 +902,7 @@ blockquote p {
 .content li {
   font-weight: 400;
   color: #4c4c4c;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.8;
   font-family: roboto, sans-serif;
 }
